--- a/web/index.html
+++ b/web/index.html
@@ -11,25 +11,9 @@ and open the template in the editor.
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="refresh" content="1; URL=http://localhost:8084/PresentationSPPP/Home">
     </head>
     <body>
-    <div class="container">
-      <header class="row">
-        <div class="col-lg-12">
-          Entete
-        </div>
-      </header>
-      <div class="row">
-        <nav class="col-lg-2">
-          Menu
-        </nav>
-        <section class="col-lg-10">
-          Section
-        </section>
-      </div>
-      <footer class="row">
-          Pied de page
-      </footer>
-    </div>
-  </body>
+
+    </body>
 </html>
